src/main/java/com/example/error/ServiceException.java
package com.example.error;

public class ServiceException extends Exception{
    
}
